<resources>
    <string name="app_name">Nexus</string>
    <string name="nexus">Nexus</string>
    <string name="next_level_shopping">Сауда-саттықтың жаңа деңгейі</string>
    <string name="todo">TODO</string>
    <string name="nygmetov_almas">Nygmetov Almas</string>
    <string name="_2022">2022</string>
    <string name="nexus2">Nexus</string>
    <string name="welcometext">Nexus қосымшасына қош келдіңіз!</string>
    <string name="Logintext">Кіру</string>
    <string name="registertext">Тіркелу</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back">"back"</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="name_surname">Name,Surname</string>
    <string name="regnow">Тіркеу</string>
    <string name="welcometext2">Welcome</string>
    <string name="logouttxt">Шығу</string>
    <string name="welcomekz">Қош келдіңіз</string>
    <string name="balance">Баланс</string>
    <string name="nominal">тг</string>
    <string name="qr">Сіздің QR Кодыңыз</string>
    <string name="qrcode">TODO</string>
    <string name="addbalance">addbalance</string>
    <string name="balanceadd">Балансты толтыру</string>
    <string name="toltyru">Толтыру</string>
    <string name="you_have">Қазір сізде</string>
</resources>