<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    tools:context=".RegisterActivity">
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registertext"
        android:textColor="#F3F1EC"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="48dp"
        android:layout_height="70dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/icons8____100" />

    <EditText
        android:id="@+id/email"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/background_noties_edit_text"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#F3F1EC"
        android:textColorHint="#F3F1EC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.178"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/background_noties_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#F3F1EC"
        android:textColorHint="#F3F1EC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.073"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/buttondesing"
        android:text="@string/regnow"
        android:textColor="#F3F1EC"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/background_noties_edit_text"
        android:ems="10"
        android:hint="@string/name_surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#F3F1EC"
        android:textColorHint="#F3F1EC"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>