<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guilherme_stecanella_gs3usbigta4_unsplash"
    tools:context=".MainPage">

        <TextView
            android:id="@+id/Welcometv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomekz"
            android:textColor="#F3F1EC"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <Button
            android:id="@+id/logoutbtn"
            android:layout_width="173dp"
            android:layout_height="71dp"
            android:background="@drawable/buttondesing"
            android:text="@string/logouttxt"
            android:textColor="#F3F1EC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Welcometv"
            app:layout_constraintVertical_bias="0.942" />

        <TextView
            android:id="@+id/nametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F3F1EC"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Welcometv"
            app:layout_constraintVertical_bias="0.015" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textColor="#F3F1EC"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.628"
            app:layout_constraintStart_toEndOf="@+id/Welcometv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/nominal"
            android:textColor="#F3F1EC"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/balancetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="28dp"
            android:textColor="#F3F1EC"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/nametxt"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/QRView"
            android:layout_width="307dp"
            android:layout_height="313dp"
            app:layout_constraintBottom_toTopOf="@+id/logoutbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.22"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/qrcode" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="@string/qr"
            android:textColor="#F3F1EC"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/addbalance"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.588"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.564"
            app:srcCompat="@drawable/icons8__48" />
</androidx.constraintlayout.widget.ConstraintLayout>